--- a/org.seerc.brokeratcloud.webservice/.project
+++ b/org.seerc.brokeratcloud.webservice/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>MessageBroker</project>
+		<project>PolicyCompletenessCompliance</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
