Added all MessageBroker JARs to classpath of BrokerPolicyValidationHandler. We use the MessageListener class now in order to subscribe to new QV monitoring topics. The monitoringTopicPrefix is now declared only once in WSO2MBClient.

--- a/BrokerPolicyValidationHandler/.classpath
+++ b/BrokerPolicyValidationHandler/.classpath
@@ -21,5 +21,113 @@
 	<classpathentry exported="true" kind="var" path="ECLIPSE_WORKSPACE/.metadata/.plugins/org.wso2.developerstudio.eclipse.libraries/lib/XmlSchema_1.4.7.wso2v2.jar"/>
 	<classpathentry kind="src" path="/PolicyCompletenessCompliance"/>
 	<classpathentry kind="src" path="/MessageBroker"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/abdera_1.0.0-wso2v3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/andes-client-0.13.wso2v8.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/axiom_1.2.11-wso2v4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/axis2_1.6.1-wso2v10.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/axis2-json_1.6.1-wso2v10.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/axis2-transport-jms_1.1.0-wso2v9.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/backport-util-concurrent_3.1.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/checkin-client-4.6.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-codec_1.4.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-dbcp_1.4.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-fileupload_1.2.2-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-httpclient_3.1.0-wso2v2.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-io_2.0.0-wso2v2.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-lang-2.6.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/commons-pool_1.5.6-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/compass_2.0.1-wso2v2.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/ehcache_1.5.0-wso2v3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-connector_2.0.1-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-j2ee-connector_1.5_spec_1.0.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-jms_1.1_spec-1.1.0.wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-saaj_1.3_spec_1.0.0-wso2v3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-stax-api_1.0_spec_1.0.1-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/geronimo-transaction_2.0.1-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/gson-2.3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/h2-1.2.140-wso2v3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/httpclient-4.2.3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/httpcore_4.3.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/httpcore-4.2.2.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/infinispan-core_5.1.2-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jboss-logging_3.1.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jcl-over-slf4j-1.6.4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jcr-2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jdbc-pool_7.0.34-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jena-arq-2.11.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jena-core-2.11.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jena-iri-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jena-sdb-1.4.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jena-tdb-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jettison_1.3.4-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jgroups_3.0.6-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/jsr107cache_1.1.0-wso2v3.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/neethi_2.0.4-wso2v4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/opensaml2_2.4.1-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.addressing_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.authenticator.proxy_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.authenticator.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.base_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.caching.core_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.core_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.core.bootup.validator_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.core.common_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.core.commons.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.core.services_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.discovery.core_4.2.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.event.client-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.event.client.stub-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.governance.api_4.2.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.governance.client-4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging.admin.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging.admin.ui_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging.service_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging.view.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.logging.view.ui_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.ndatasource.common_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.ndatasource.core_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.ndatasource.rdbms_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.queuing_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.admin.api_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.api_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.common_4.2.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.common.ui_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.core_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.extensions_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.extensions.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.extensions.ui_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.indexing.stub-4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.jcr_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.ws.api_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.ws.client_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.registry.ws.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.rm_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.securevault_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.security.mgt_4.2.1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.security.mgt.stub_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.security.mgt.ui_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.user.api_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.user.core_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.carbon.utils_4.2.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/org.wso2.securevault_1.0.0-wso2v2.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/rampart-core_1.6.1-wso2v11.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/rampart-policy_1.6.1-wso2v11.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/rampart-trust_1.6.1-wso2v11.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/slf4j-1.5.10.wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/slf4j-api-1.6.4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/slf4j-log4j12-1.6.4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/spring.framework_3.1.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/woden_1.0.0.M8-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/wsdl4j_1.6.2-wso2v4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/wss4j_1.5.11-wso2v6.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/wstx-asl-3.2.4.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/xmlbeans_2.3.0-wso2v1.jar"/>
+	<classpathentry kind="lib" path="/MessageBroker/lib/XmlSchema_1.4.7-wso2v2.jar"/>
 	<classpathentry kind="output" path="target"/>
 </classpath>
