Created a service deprecation gandler. Currently, when a service is deleted it get deleted from Fuseki also. Had to rename the default Activator package name in order not to conflict with the first handler. Also, had to rename packages of the Handler classes in order to be exported properly in WSO2's OSGi. Service deprecation handler is exported with the BrokerAtCloud .car.

--- a/ServiceDeprecationHandler/pom.xml
+++ b/ServiceDeprecationHandler/pom.xml
@@ -2,12 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.seerc.BrokerPolicyValidationHandler</groupId>
-  <artifactId>BrokerPolicyValidationHandler</artifactId>
+  <groupId>org.seerc.ServiceDeprecationHandler</groupId>
+  <artifactId>ServiceDeprecationHandler</artifactId>
   <version>1.0.0</version>
   <packaging>bundle</packaging>
-  <name>BrokerPolicyValidationHandler</name>
-  <description>BrokerPolicyValidationHandler</description>
+  <name>ServiceDeprecationHandler</name>
+  <description>ServiceDeprecationHandler</description>
   <properties>
     <CApp.type>lib/registry/handlers</CApp.type>
   </properties>
@@ -127,10 +127,10 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName>BrokerPolicyValidationHandler</Bundle-SymbolicName>
-            <Bundle-Name>BrokerPolicyValidationHandler</Bundle-Name>
-            <Bundle-Activator>org.wso2.custom.internal.registry.handler.Activator</Bundle-Activator>
-            <Export-Package>org.seerc.handlers.brokerPolicy</Export-Package>
+            <Bundle-SymbolicName>ServiceDeprecationHandler</Bundle-SymbolicName>
+            <Bundle-Name>ServiceDeprecationHandler</Bundle-Name>
+            <Bundle-Activator>org.wso2.custom.internal.serviceDeprecation.handler.Activator</Bundle-Activator>
+            <Export-Package>org.seerc.handlers.service</Export-Package>
             <DynamicImport-Package>*</DynamicImport-Package>
           </instructions>
         </configuration>
