--- a/BrokerPolicyValidationHandler/BrokerAtCloud/pom.xml
+++ b/BrokerPolicyValidationHandler/BrokerAtCloud/pom.xml
@@ -9,6 +9,7 @@
   <name>BrokerAtCloud</name>
   <description>BrokerAtCloud</description>
   <properties>
+    <org.seerc.ServiceDeprecationHandler_._ServiceDeprecationHandler>capp/GovernanceRegistry</org.seerc.ServiceDeprecationHandler_._ServiceDeprecationHandler>
     <org.seerc.BrokerPolicyValidationHandler_._BrokerPolicyValidationHandler>capp/GovernanceRegistry</org.seerc.BrokerPolicyValidationHandler_._BrokerPolicyValidationHandler>
     <artifact.types>jaggery/app=zip,service/rule=aar,lib/library/bundle=jar,synapse/message-processors=xml,synapse/endpointTemplate=xml,synapse/proxy-service=xml,synapse/message-store=xml,carbon/application=car,registry/resource=zip,lib/dataservice/validator=jar,synapse/endpoint=xml,web/application=war,synapse/sequence=xml,synapse/configuration=xml,lib/registry/handlers=jar,synapse/task=xml,service/meta=xml,webapp/jaxws=war,synapse/api=xml,cep/bucket=xml,bpel/workflow=zip,lib/registry/filter=jar,service/dataservice=dbs,synapse/local-entry=xml,synapse/priority-executor=xml,synapse/event-source=xml,synapse/template=xml,lib/carbon/ui=jar,service/axis2=aar,synapse/sequenceTemplate=xml,wso2/gadget=dar,lib/synapse/mediator=jar</artifact.types>
   </properties>
@@ -16,6 +17,11 @@
     <dependency>
       <groupId>org.seerc.BrokerPolicyValidationHandler</groupId>
       <artifactId>BrokerPolicyValidationHandler</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seerc.ServiceDeprecationHandler</groupId>
+      <artifactId>ServiceDeprecationHandler</artifactId>
       <version>1.0.0</version>
     </dependency>
   </dependencies>
